<resources>
    <string name="app_name">Track My Debt</string>
    <string name="title_home">Overview</string>
    <string name="title_dashboard">Recent Activity</string>

    <!-- About fragment -->
    <string name="developer_name" translatable="false">Michael Mutert</string>
    <string name="fragment_about_licenses_header_title">Third-Party Libraries and Licenses</string>
    <string name="fragment_about_links_header_title">Links</string>
    <string name="fragment_about_send_feedback_button_label">Send feedback</string>
    <string name="fragment_about_view_source_button_label">View source code on Github</string>
    <string name="fragment_about_bug_report_button_label">Report a bug or request a feature</string>
    <string name="fragment_about_joda_time_button_label" translatable="false">Joda-Time</string>
    <string name="fragment_about_version_text">Version %s</string>
    <string name="support_email" translatable="false">contact@michaelmutert.com</string>
    <string name="support_email_subject" translatable="false">Track My Debt Feedback</string>
    <string name="github_repository_url" translatable="false">https://github.com/tretum/trackmydebt</string>
    <string name="joda_time_url" translatable="false">https://www.joda.org/joda-time/</string>

    <string name="fragment_settings_title">Settings</string>
    <string name="pref_night_mode_title">Night mode</string>
    <string name="pref_night_mode_key" translatable="false">pref_night_mode_key</string>
    <string name="pref_paypal_username_key">pref_paypal_username</string>

    <string name="theme_label_light">Light</string>
    <string name="theme_label_dark">Dark</string>
    <string name="theme_label_default">Set by Battery Saver</string>
    <string name="theme_value_light" translatable="false">light</string>
    <string name="theme_value_dark" translatable="false">dark</string>
    <string name="theme_value_default" translatable="false">default</string>


    <string name="dialog_add_person_title">Add Person</string>
    <string name="dialog_add_person_enter_name_hint">Enter name</string>
    <string name="dialog_add_person_paypal_username_hint">Paypal.me Username (Optional)</string>

    <string name="fragment_person_detail_credit_label">Credit:</string>
    <string name="fragment_person_detail_debt_label">Debt:</string>
    <string name="button_paypal_request_label">Request</string>
    <string name="button_paypal_send_label">Pay</string>

    <string name="menu_item_about_title">About</string>
    <string name="menu_item_settings_title">Settings</string>

    <string name="fragment_home_overall_balance_label">Overall balance</string>

    <string name="transaction_state_money_to_user">I received money</string>
    <string name="transaction_state_money_from_user">I gave money</string>
    <string name="transaction_state_lent_by_user">I bought for someone</string>
    <string name="transaction_state_lent_to_user">Someone bought for me</string>

    <string name="no_reason">(No reason given)</string>
    <string name="received_transaction">Received</string>
    <string name="sent_transaction">Given</string>
    <string name="paypal_link_share_menu_title">Share with…</string>
    <string name="undo_button_label">Undo</string>
    <string name="error_string">Required field</string>
    <string name="action_save">Save</string>
    <string name="fragment_title_edit_transaction">Edit Transaction</string>
    <string name="fragment_title_new_transaction">New transaction</string>
    <string name="fragment_add_transaction_date_picker_title">Pick date of transaction</string>
    <string name="empty_string" />
    <string name="fragment_home_money_lent">Money lent</string>
    <string name="fragment_home_money_owed">Money owed</string>
    <string name="successfully_saved_transaction_message">Transaction saved</string>
    <string name="successfully_added_transaction_message">Transaction added</string>
    <string name="successfully_deleted_person">Person deleted</string>
    <string name="money_request_paypal_instruction">Please send me the money using the following link:</string>
    <string name="money_request_paypal_opening_line">You owe me %s.</string>
    <string name="fragment_add_transaction_hint_reason_long_optional">Reason (long, optional)</string>
    <string name="filter_all">All</string>
    <string name="filter_debt">Debt only</string>
    <string name="filter_credit">Credit only</string>
    <string name="menu_item_filter_title">Filter</string>
    <string name="label_all_persons">All persons</string>
    <string name="no_persons_all">There are no persons to display</string>
    <string name="label_debt_persons">Debt only</string>
    <string name="no_persons_debt">There are no persons with whom you are in debt</string>
    <string name="no_persons_credit">There are no persons which owe you</string>
    <string name="label_credit_persons">Credit only</string>

</resources>