<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/dialog_add_person_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/dialog_add_person_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_name_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintAnimationEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialog_add_person_title"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_name_input"
                    android:hint="@string/dialog_add_person_enter_name_hint"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/text_input_pad_horizontal"
                    android:paddingLeft="@dimen/text_input_pad_horizontal"
                    android:paddingRight="@dimen/text_input_pad_horizontal"
                    android:paddingTop="12dp"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintAnimationEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/il_name_input"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_paypal_username_input"
                    android:hint="@string/dialog_add_person_paypal_username_hint"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/text_input_pad_horizontal"
                    android:paddingLeft="@dimen/text_input_pad_horizontal"
                    android:paddingRight="@dimen/text_input_pad_horizontal"
                    android:paddingTop="12dp"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>

